--- a/Example/CreditsExample/CreditsExample/license-body.html
+++ b/Example/CreditsExample/CreditsExample/license-body.html
@@ -21,6 +21,10 @@
       font-weight: bold;
       font-size: 1.5em;
     }
+    .license-link {
+        color: rgb(0, 0, 120);
+        font-weight: normal;
+    }
     .license-content {
       font-family: monospace;
     }
