Initial commit. Small formatting change in HTML.

--- a/Example/CreditsExample/CreditsExample/license-content.html
+++ b/Example/CreditsExample/CreditsExample/license-content.html
@@ -4,5 +4,5 @@
 </div>
 
 <div class="license-content">
-    $CONTENT <!-- Wrap each paragram in <p></p> for proper formatting -->
+    $CONTENT <!-- Wrap each license in <p></p> for proper formatting -->
 </div>
